# elevenlabs-mcp

./: pyproject.toml
elevenlabs_mcp/: server.py
