[tool.poetry]
name = "elevenlabs-mcp"
version = "0.2.1"
description = "ElevenLabs MCP Server"
authors = ["Jacek Duszenko <jacek@elevenlabs.io>"]

readme = "README.md"
license = "MIT"
keywords = ["elevenlabs", "mcp", "text-to-speech", "speech-to-text", "voice-cloning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
mcp = { extras = ["cli"], version = ">=1.6.0" }
fastapi = "0.109.2"
uvicorn = "0.27.1"
python-dotenv = "1.0.1"
pydantic = ">=2.6.1"
httpx = "0.28.1"
elevenlabs = ">=1.56.0"
fuzzywuzzy = "0.18.0"
python-Levenshtein = ">=0.25.0"
sounddevice = "0.5.1"
soundfile = "0.13.1"

[tool.poetry.scripts]
elevenlabs-mcp = "elevenlabs_mcp.server:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.6.2"
ruff = "0.3.0"
fastmcp = "0.4.1"
pytest = "8.0.0"
pytest-cov = "4.1.0"
twine = "6.1.0"
build = ">=1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
